--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bota que irá moderar sua comunidade de forma segura">
     <title>Moderação de Comunidade</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="header">
@@ -26,7 +26,7 @@
                 <h2 class="main-content-subtitle">Moderamos sua comunidade de forma segura</h2>
                 <button class="main-content-button">Clique</button>
             </div>
-            <img class="main-content-image" src="Bot-Moderador.png" alt="Imagem do Bot Moderador">
+            <img class="main-content-image" src="./Bot-Moderador.png" alt="Imagem do Bot Moderador">
         </section>
 
         <section class="second-content">
